--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pet Store</title>
+    <title>Tech Store</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,7 +59,7 @@
     </style>
 </head>
 <body>
-    <h1>Top Pet Products</h1>
+    <h1>Top Tech Products</h1>
     <div class="card-container" id="cardContainer">
         <!-- Cards will be dynamically inserted here -->
     </div>
@@ -91,7 +91,7 @@
         }
 
         async function renderCards() {
-            const jsonURL = "/catstore/sample.json";
+            const jsonURL = "/catstore/products.json";
             try {
                 const data = await loadJSON(jsonURL);
                 const container = document.getElementById('cardContainer');
