--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         }
 
         async function renderCards() {
-            const jsonURL = "/catstore/products.json";
+            const jsonURL = "/store/products.json";
             try {
                 const data = await loadJSON(jsonURL);
                 const container = document.getElementById('cardContainer');
